# server/src/entity/index.ts
@@ -1,1 +1,2 @@
 export * from './game.entity';
+export * from './location.entity';
