# server/src/entity/location.entity.ts
@@ -1,0 +1,10 @@
+import { Entity, Column, PrimaryGeneratedColumn } from 'typeorm';
+
+@Entity({name: 'locations'})
+export class Location {
+    @PrimaryGeneratedColumn()
+    id!: string;
+
+    @Column()
+    name!: string;
+}
