# server/src/routes/index.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import * as controllers from '../controllers/index';
+import * as controllers from '../controllers';
 
 export const routes = Router();
 
@@ -10,3 +10,7 @@ routes.get('/api/games/:id', controllers.GameController.getOne);
 routes.post('/api/games', controllers.GameController.create);
 routes.put('/api/games/:id', controllers.GameController.update);
 routes.delete('/api/games/:id', controllers.GameController.delete);
+
+// Locations
+routes.get('/api/locations', controllers.LocationController.getList);
+routes.get('/api/locations/random', controllers.LocationController.getRandomOne);
